Correción del proyecto, debido a fallos que hubieron a la hora del desarrollo de los puntos anteriores y a su vez, fallos de conexión con GitHub

--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Informe_POO.App"
+﻿<Application x:Class="InformePOO.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Informe_POO"
+             xmlns:local="clr-namespace:InformePOO"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
