--- a/Game.xaml
+++ b/Game.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="Informe_POO.Game"
+﻿<Page x:Class="InformePOO.Game"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Informe_POO"
+      xmlns:local="clr-namespace:InformePOO"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Game">
