--- a/Game.xaml
+++ b/Game.xaml
@@ -8,17 +8,11 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Game">
 
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFB1D6FB"/>
-                <GradientStop Color="#FF4F9EFD" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-        <TextBlock x:Name="txtOutPut" HorizontalAlignment="Left" Height="318" Margin="494,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="240" Background="White"><Run Language="es-co"/></TextBlock>
-        <Button Name="btnRequest" Content="Solicitar" HorizontalAlignment="Left" Margin="90,118,0,0" VerticalAlignment="Top" Height="36" Width="92" Click="btnRequest_Click"/>
-        <Button Name="btnPlant" Content="Plantar" HorizontalAlignment="Left" Margin="308,118,0,0" VerticalAlignment="Top" Height="36" Width="92" Click="btnPlant_Click"/>
-        <Button Name="btnPlayAgain" Visibility="Hidden" Content="Jugar de nuevo" HorizontalAlignment="Left" Margin="199,173,0,0" VerticalAlignment="Top" Height="36" Width="92" FontWeight="Bold" FontStyle="Italic" Click="btnPlayAgain_Click"/>
+    <Grid Background="#FFFFC914">
+        <TextBlock x:Name="txtOutPut" HorizontalAlignment="Left" Height="318" Margin="494,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="240" Background="#FFEEEEFF" Foreground="#FF423E3B"><Run Language="es-co"/></TextBlock>
+        <Button Name="btnRequest" Content="Solicitar" HorizontalAlignment="Left" Margin="90,118,0,0" VerticalAlignment="Top" Height="36" Width="92" Click="btnRequest_Click" Background="#FFEEEEFF" Foreground="#FF423E3B" BorderBrush="#FF423E3B"/>
+        <Button Name="btnPlant" Content="Plantar" HorizontalAlignment="Left" Margin="308,118,0,0" VerticalAlignment="Top" Height="36" Width="92" Click="btnPlant_Click" Background="#FFEEEEFF" Foreground="#FF423E3B" BorderBrush="#FF423E3B"/>
+        <Button Name="btnPlayAgain" Visibility="Hidden" Content="Jugar de nuevo" HorizontalAlignment="Left" Margin="199,173,0,0" VerticalAlignment="Top" Height="36" Width="92" FontWeight="Bold" FontStyle="Italic" Background="#FFEEEEFF" Foreground="#FF423E3B" BorderBrush="#FF423E3B" Click="btnPlayAgain_Click"/>
         <Button Name="btnStart" Visibility="Hidden" Content="" HorizontalAlignment="Left" Margin="199,173,0,0" VerticalAlignment="Top" Height="36" Width="92"/>
         <Button Name="btnMarginRequest" Visibility="Hidden" Content="" HorizontalAlignment="Left" Margin="90,118,0,0" VerticalAlignment="Top" Height="36" Width="92"/>
 
