--- a/Login.xaml
+++ b/Login.xaml
@@ -8,15 +8,9 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Login">
 
-    <Grid>
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFFFF9D2"/>
-                <GradientStop Color="#FFFFD958" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-        <Label Content="Ingresa tu nombre:" HorizontalAlignment="Left" Height="36" Margin="205,96,0,0" VerticalAlignment="Top" Width="147" FontSize="16" FontWeight="Normal" FontStyle="Italic"/>
-        <TextBox Name="txtName" HorizontalAlignment="Left" Height="36" Margin="415,96,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" BorderThickness="1,1,1,1"/>
-        <Button Content="Jugar" HorizontalAlignment="Center" Height="36" Margin="0,221,0,0" VerticalAlignment="Top" Width="104" FontSize="16" FontWeight="Bold" FontStyle="Italic" BorderThickness="1,1,1,1" Click="Button_Click" Grid.ColumnSpan="1" Grid.RowSpan="1" Padding="0,0,0,0" ScrollViewer.CanContentScroll="True" ClipToBounds="True"/>
+    <Grid Background="#4F9EFD">
+        <Label Content="Ingresa tu nombre:" HorizontalAlignment="Left" Height="36" Margin="205,96,0,0" VerticalAlignment="Top" Width="147" FontSize="16" FontWeight="Normal" FontStyle="Italic" Foreground="#FF423E3B"/>
+        <TextBox Name="txtName" HorizontalAlignment="Left" Height="36" Margin="415,96,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" BorderThickness="1,1,1,1" Background="#FFEEEEFF" Foreground="#FF423E3B" BorderBrush="#FF423E3B"/>
+        <Button Content="Jugar" HorizontalAlignment="Center" Height="36" Margin="0,221,0,0" VerticalAlignment="Top" Width="104" FontSize="16" FontWeight="Bold" FontStyle="Italic" BorderThickness="1,1,1,1" Click="Button_Click" Grid.ColumnSpan="1" Grid.RowSpan="1" Padding="0,0,0,0" ScrollViewer.CanContentScroll="True" ClipToBounds="True" Background="#FFEEEEFF" Foreground="#FF423E3B" BorderBrush="#FF423E3B"/>
     </Grid>
 </Page>
